UI Overhaul: Enhanced glassmorphism, reduced spacing, and standardized premium styling across all pages

--- a/nuvia-website/about.html
+++ b/nuvia-website/about.html
@@ -53,7 +53,7 @@
 
     <main>
         <!-- The Story -->
-        <section class="section section-white">
+        <section class="section bg-mesh">
             <div class="container" style="max-width: 800px;">
                 <div class="fade-in">
                     <h2>Our Story</h2>
@@ -244,7 +244,7 @@
         </section>
 
         <!-- CTA -->
-        <section class="section section-white">
+        <section class="section bg-mesh-dark">
             <div class="container text-center">
                 <h2>Ready to Discuss Your Project?</h2>
                 <p style="max-width: 600px; margin: 0 auto 2rem;">Your story matters. Your property matters. Your legacy
