--- a/nuvia-website/properties.html
+++ b/nuvia-website/properties.html
@@ -44,7 +44,7 @@
 
     <main>
         <!-- Properties Grid -->
-        <section class="section section-white">
+        <section class="section bg-mesh">
             <div class="container">
                 <!-- Filter Bar -->
                 <div class="card card-glass mb-6"
