--- a/nuvia-website/student-housing.html
+++ b/nuvia-website/student-housing.html
@@ -45,7 +45,7 @@
 
     <main>
         <!-- Why It Matters -->
-        <section class="section section-white">
+        <section class="section bg-mesh">
             <div class="container">
                 <h2 class="text-center mb-6">What Makes The Difference</h2>
                 <div class="trust-grid fade-in">
@@ -239,7 +239,7 @@
         </section>
 
         <!-- FAQ -->
-        <section class="section section-white">
+        <section class="section bg-mesh">
             <div class="container" style="max-width: 800px;">
                 <h2 class="text-center mb-6">Student Housing FAQ</h2>
                 <div class="accordion">
