--- a/nuvia-website/contact.html
+++ b/nuvia-website/contact.html
@@ -44,7 +44,7 @@
 
     <main>
         <!-- Contact Forms -->
-        <section class="section section-white">
+        <section class="section bg-mesh">
             <div class="container" style="max-width: 900px;">
                 <div class="tabs">
                     <div class="tab-list">
