--- a/nuvia-website/projects.html
+++ b/nuvia-website/projects.html
@@ -43,7 +43,7 @@
 
     <main>
         <!-- Project Categories -->
-        <section class="section section-white">
+        <section class="section bg-mesh">
             <div class="container">
                 <div class="tabs">
                     <div class="tab-list">
@@ -178,7 +178,7 @@
         </section>
 
         <!-- CTA -->
-        <section class="section section-navy">
+        <section class="section bg-mesh-dark">
             <div class="container text-center">
                 <h2 style="color: var(--white);">Want to See Your Project Here?</h2>
                 <p style="color: rgba(255,255,255,0.9); max-width: 600px; margin: 0 auto 2rem;">Let's discuss your
