--- a/nuvia-website/services.html
+++ b/nuvia-website/services.html
@@ -44,7 +44,7 @@
 
     <main>
         <!-- Diaspora Development -->
-        <section id="diaspora" class="section section-white">
+        <section id="diaspora" class="section bg-mesh">
             <div class="container">
                 <div class="grid grid-2" style="align-items: center; gap: 4rem;">
                     <div class="fade-in">
@@ -85,7 +85,7 @@
         </section>
 
         <!-- Student Housing -->
-        <section id="students" class="section section-cream">
+        <section id="students" class="section section-white">
             <div class="container">
                 <div class="grid grid-2" style="align-items: center; gap: 4rem;">
                     <div class="card card-glass slide-in-left" style="order: 1;">
@@ -123,7 +123,7 @@
         </section>
 
         <!-- Property Management -->
-        <section id="management" class="section section-white">
+        <section id="management" class="section bg-mesh">
             <div class="container">
                 <div class="grid grid-2" style="align-items: center; gap: 4rem;">
                     <div class="fade-in">
@@ -185,7 +185,7 @@
         </section>
 
         <!-- Construction -->
-        <section id="construction" class="section section-cream">
+        <section id="construction" class="section section-white">
             <div class="container">
                 <div class="grid grid-2" style="align-items: center; gap: 4rem;">
                     <div class="card card-glass slide-in-left">
@@ -215,7 +215,7 @@
         </section>
 
         <!-- CTA -->
-        <section class="section section-navy">
+        <section class="section bg-mesh-dark">
             <div class="container text-center">
                 <h2 style="color: var(--white);">Ready to Get Started?</h2>
                 <p style="color: rgba(255,255,255,0.9); max-width: 600px; margin: 0 auto 2rem;">Tell us about your
