Fix blank spaces in Featured Properties and update Lived Experience image

--- a/nuvia-website/about.html
+++ b/nuvia-website/about.html
@@ -54,25 +54,42 @@
     <main>
         <!-- The Story -->
         <section class="section bg-mesh">
-            <div class="container" style="max-width: 800px;">
-                <div class="fade-in">
-                    <h2>Our Story</h2>
-                    <p style="font-size: 1.125rem; line-height: 1.8;">Nuvia was born from responsibility, resilience,
-                        and a vision bigger than ourselves.</p>
-                    <p>As a first-born daughter raised between two worlds—home in Zimbabwe and opportunity abroad—I've
-                        lived the pressure of wanting better for my family while navigating life in the diaspora. I know
-                        what it feels like to dream of building back home but not knowing who to trust, who will be
-                        honest, or who will deliver the way you would if you were physically there.</p>
-                    <p><strong>That's why Nuvia exists.</strong></p>
-                    <p>I created this company to become the dependable bridge between the diaspora and home—a company
-                        that handles property development, construction, and student accommodation with heart,
-                        integrity, and excellence. Not because of money, but because I understand the emotional weight
-                        behind every decision. Every brick, every payment, every update… it matters.</p>
+            <div class="container">
+                <div class="grid grid-2" style="align-items: center; gap: 4rem;">
+                    <div class="fade-in">
+                        <h2>Our Story</h2>
+                        <p style="font-size: 1.125rem; line-height: 1.8;">Nuvia was born from responsibility,
+                            resilience,
+                            and a vision bigger than ourselves.</p>
+                        <p>As a first-born daughter raised between two worlds—home in Zimbabwe and opportunity
+                            abroad—I've
+                            lived the pressure of wanting better for my family while navigating life in the diaspora. I
+                            know
+                            what it feels like to dream of building back home but not knowing who to trust, who will be
+                            honest, or who will deliver the way you would if you were physically there.</p>
+                        <p><strong>That's why Nuvia exists.</strong></p>
+                        <p>I created this company to become the dependable bridge between the diaspora and home—a
+                            company
+                            that handles property development, construction, and student accommodation with heart,
+                            integrity, and excellence.</p>
 
-                    <blockquote
-                        style="border-left: 4px solid var(--gold); padding-left: 1.5rem; margin: 2rem 0; font-family: var(--font-heading); font-style: italic; font-size: 1.25rem; color: var(--navy);">
-                        "Your dream will be cared for the way you would care for it."
-                    </blockquote>
+                        <blockquote
+                            style="border-left: 4px solid var(--gold); padding-left: 1.5rem; margin: 2rem 0; font-family: var(--font-heading); font-style: italic; font-size: 1.25rem; color: var(--navy);">
+                            "Your dream will be cared for the way you would care for it."
+                        </blockquote>
+                    </div>
+                    <div class="slide-in-right">
+                        <div style="position: relative;">
+                            <img src="https://images.unsplash.com/photo-1573164713714-d95e436ab8d6?w=600&q=80"
+                                alt="CEO Portrait"
+                                style="border-radius: var(--radius-lg); box-shadow: var(--shadow-xl); width: 100%;">
+                            <div class="card card-glass"
+                                style="position: absolute; bottom: -20px; right: -20px; padding: 1rem 2rem; max-width: 250px;">
+                                <h4 style="margin: 0; color: var(--navy);">Tariro M.</h4>
+                                <p style="margin: 0; font-size: 0.875rem; color: var(--gold);">Founder & CEO</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -191,6 +208,48 @@
                     <div class="trust-item" style="color: var(--white);">
                         <h4 style="color: var(--gold);">Resilience</h4>
                         <p style="color: rgba(255,255,255,0.8);">Building from nothing</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Meet The Team -->
+        <section class="section section-white">
+            <div class="container">
+                <h2 class="text-center mb-6">Built By Professionals</h2>
+                <div class="grid grid-3 stagger-animation">
+                    <!-- Team Member 1 -->
+                    <div class="card text-center">
+                        <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?w=400&q=80"
+                            alt="Civil Engineer"
+                            style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin: 0 auto 1rem; border: 3px solid var(--gold-light);">
+                        <h3 style="font-size: 1.25rem; margin-bottom: 0.25rem;">Kudzanai C.</h3>
+                        <p style="color: var(--gold); font-size: 0.875rem; font-weight: 600; margin-bottom: 1rem;">Civil
+                            Engineer</p>
+                        <p style="font-size: 0.9rem;">10+ years managing complex infrastructure projects across SADC.
+                        </p>
+                    </div>
+
+                    <!-- Team Member 2 -->
+                    <div class="card text-center">
+                        <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e?w=400&q=80"
+                            alt="Head of Operations"
+                            style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin: 0 auto 1rem; border: 3px solid var(--gold-light);">
+                        <h3 style="font-size: 1.25rem; margin-bottom: 0.25rem;">Nyasha M.</h3>
+                        <p style="color: var(--gold); font-size: 0.875rem; font-weight: 600; margin-bottom: 1rem;">Head
+                            of Operations</p>
+                        <p style="font-size: 0.9rem;">Ensuring every timeline is met and every process is followed.</p>
+                    </div>
+
+                    <!-- Team Member 3 -->
+                    <div class="card text-center">
+                        <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?w=400&q=80"
+                            alt="Senior Architect"
+                            style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; margin: 0 auto 1rem; border: 3px solid var(--gold-light);">
+                        <h3 style="font-size: 1.25rem; margin-bottom: 0.25rem;">Farai G.</h3>
+                        <p style="color: var(--gold); font-size: 0.875rem; font-weight: 600; margin-bottom: 1rem;">
+                            Senior Architect</p>
+                        <p style="font-size: 0.9rem;">Designing modern, sustainable spaces that honour our heritage.</p>
                     </div>
                 </div>
             </div>
