--- a/nuvia-website/projects.html
+++ b/nuvia-website/projects.html
@@ -57,59 +57,55 @@
                         <div class="property-grid fade-in">
                             <!-- Project 1 -->
                             <div class="property-card">
-                                <div class="property-image"
-                                    style="background: linear-gradient(135deg, var(--navy-light), var(--navy)); display: flex; align-items: center; justify-content: center;">
-                                    <span style="color: var(--gold); font-size: 4rem;">🏗️</span>
+                                <div class="property-image">
+                                    <img src="https://images.unsplash.com/photo-1590247813693-55909f4963c3?w=600&q=80"
+                                        alt="Construction Site">
+                                    <span class="property-badge" style="background: var(--gold);">In Progress</span>
                                 </div>
                                 <div class="property-content">
-                                    <span class="property-badge"
-                                        style="position: static; margin-bottom: 0.5rem; display: inline-block;">In
-                                        Progress</span>
-                                    <h3>Harare Residential Project</h3>
+                                    <h3>The Highlands Manor</h3>
                                     <p class="property-location"><svg viewBox="0 0 24 24">
                                             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z" />
                                             <circle cx="12" cy="10" r="3" />
                                         </svg> Borrowdale, Harare</p>
-                                    <p style="color: var(--charcoal); font-size: 0.875rem;">4-bedroom diaspora build
-                                        with modern finishes</p>
+                                    <p style="color: var(--charcoal); font-size: 0.875rem;">Luxury 5-bedroom diaspora
+                                        build. Currently at roof level. Expected completion: August 2026.</p>
                                 </div>
                             </div>
 
                             <!-- Project 2 -->
                             <div class="property-card">
-                                <div class="property-image"
-                                    style="background: linear-gradient(135deg, var(--navy-light), var(--navy)); display: flex; align-items: center; justify-content: center;">
-                                    <span style="color: var(--gold); font-size: 4rem;">🏠</span>
+                                <div class="property-image">
+                                    <img src="https://images.unsplash.com/photo-1503387762-592deb58ef4e?w=600&q=80"
+                                        alt="Architectural Plans">
+                                    <span class="property-badge" style="background: var(--navy);">Planning</span>
                                 </div>
                                 <div class="property-content">
-                                    <span class="property-badge"
-                                        style="position: static; margin-bottom: 0.5rem; display: inline-block; background: var(--navy);">Planned</span>
-                                    <h3>Student Housing Complex</h3>
+                                    <h3>Nuvia Student Village</h3>
                                     <p class="property-location"><svg viewBox="0 0 24 24">
                                             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z" />
                                             <circle cx="12" cy="10" r="3" />
                                         </svg> Near NUST, Bulawayo</p>
-                                    <p style="color: var(--charcoal); font-size: 0.875rem;">Modern student accommodation
-                                        development</p>
+                                    <p style="color: var(--charcoal); font-size: 0.875rem;">200-unit student
+                                        accommodation complex. Land auditing and architectural design phase.</p>
                                 </div>
                             </div>
 
                             <!-- Project 3 -->
                             <div class="property-card">
-                                <div class="property-image"
-                                    style="background: linear-gradient(135deg, var(--navy-light), var(--navy)); display: flex; align-items: center; justify-content: center;">
-                                    <span style="color: var(--gold); font-size: 4rem;">🔨</span>
+                                <div class="property-image">
+                                    <img src="https://images.unsplash.com/photo-1533090161767-e6ffed986c88?w=600&q=80"
+                                        alt="Office Renovation">
+                                    <span class="property-badge" style="background: var(--navy);">Starting Soon</span>
                                 </div>
                                 <div class="property-content">
-                                    <span class="property-badge"
-                                        style="position: static; margin-bottom: 0.5rem; display: inline-block; background: var(--navy);">Planned</span>
-                                    <h3>Commercial Renovation</h3>
+                                    <h3>CBD Office Revamp</h3>
                                     <p class="property-location"><svg viewBox="0 0 24 24">
                                             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z" />
                                             <circle cx="12" cy="10" r="3" />
                                         </svg> Harare CBD</p>
-                                    <p style="color: var(--charcoal); font-size: 0.875rem;">Office space modernization
-                                        project</p>
+                                    <p style="color: var(--charcoal); font-size: 0.875rem;">Modernization of 500sqm
+                                        office space. Glass partitioning and solar installation.</p>
                                 </div>
                             </div>
                         </div>
