--- a/nuvia-website/student-housing.html
+++ b/nuvia-website/student-housing.html
@@ -121,14 +121,12 @@
                 <h2 class="text-center mb-6">Available Accommodation</h2>
                 <div class="property-grid fade-in">
                     <div class="property-card">
-                        <div class="property-image"
-                            style="background: linear-gradient(135deg, var(--gold-light), var(--cream)); display: flex; align-items: center; justify-content: center;">
-                            <span style="color: var(--gold); font-size: 3rem;">🏠</span>
+                        <div class="property-image">
+                            <img src="https://images.unsplash.com/photo-1555854877-bab0e564b8d5?w=600&q=80"
+                                alt="Student Room Near NUST">
+                            <span class="property-badge">Coming Soon</span>
                         </div>
                         <div class="property-content">
-                            <span class="property-badge"
-                                style="position: static; margin-bottom: 0.5rem; display: inline-block;">Coming
-                                Soon</span>
                             <h3>Near NUST</h3>
                             <p style="color: var(--charcoal); margin-bottom: 1rem;">Modern student housing near National
                                 University of Science & Technology</p>
@@ -136,14 +134,12 @@
                         </div>
                     </div>
                     <div class="property-card">
-                        <div class="property-image"
-                            style="background: linear-gradient(135deg, var(--gold-light), var(--cream)); display: flex; align-items: center; justify-content: center;">
-                            <span style="color: var(--gold); font-size: 3rem;">🏠</span>
+                        <div class="property-image">
+                            <img src="https://images.unsplash.com/photo-1522771753035-4850dc638219?w=600&q=80"
+                                alt="Student Room Near UZ">
+                            <span class="property-badge">Coming Soon</span>
                         </div>
                         <div class="property-content">
-                            <span class="property-badge"
-                                style="position: static; margin-bottom: 0.5rem; display: inline-block;">Coming
-                                Soon</span>
                             <h3>Near UZ</h3>
                             <p style="color: var(--charcoal); margin-bottom: 1rem;">Quality accommodation near
                                 University of Zimbabwe</p>
@@ -151,14 +147,12 @@
                         </div>
                     </div>
                     <div class="property-card">
-                        <div class="property-image"
-                            style="background: linear-gradient(135deg, var(--gold-light), var(--cream)); display: flex; align-items: center; justify-content: center;">
-                            <span style="color: var(--gold); font-size: 3rem;">🏠</span>
+                        <div class="property-image">
+                            <img src="https://images.unsplash.com/photo-1595526114035-0d45ed16cfbf?w=600&q=80"
+                                alt="Student Room Near MSU">
+                            <span class="property-badge">Coming Soon</span>
                         </div>
                         <div class="property-content">
-                            <span class="property-badge"
-                                style="position: static; margin-bottom: 0.5rem; display: inline-block;">Coming
-                                Soon</span>
                             <h3>Near MSU</h3>
                             <p style="color: var(--charcoal); margin-bottom: 1rem;">Safe housing near Midlands State
                                 University</p>
