--- a/nuvia-website/index.html
+++ b/nuvia-website/index.html
@@ -16,8 +16,8 @@
     rel="stylesheet">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="stylesheet" href="assets/css/responsive.css">
+  <link rel="stylesheet" href="assets/css/styles.css?v=2">
+  <link rel="stylesheet" href="assets/css/responsive.css?v=2">
 </head>
 
 <body>
@@ -52,12 +52,13 @@
   </header>
 
   <!-- Hero Section -->
-  <section class="hero" style="background-image: url('assets/images/hero-home.png');">
+  <section class="hero"
+    style="background-image: url('https://images.unsplash.com/photo-1600607686527-6fb886090705?q=80&w=2540&auto=format&fit=crop');">
     <div class="hero-overlay"></div>
     <div class="hero-content">
       <h1>The Diaspora Deserves Better.</h1>
-      <p>Professional property solutions built on transparency, integrity, and results. Build your dream from anywhere
-        with Nuvia.</p>
+      <p>Professional property solutions built on transparency, integrity, and results. Build your dream home in
+        Zimbabwe from anywhere.</p>
       <div class="hero-cta">
         <a href="contact.html" class="btn btn-primary btn-lg">Start Your Project</a>
         <a href="about.html" class="btn btn-white">Learn Our Story</a>
@@ -80,7 +81,7 @@
           <!-- Diaspora Development -->
           <div class="card card-image service-card">
             <div class="card-image-bg"
-              style="background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=600&q=80');">
+              style="background-image: url('https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=800&q=80');">
             </div>
             <div class="card-image-content">
               <h3>Diaspora Development</h3>
@@ -92,7 +93,7 @@
           <!-- Student Housing -->
           <div class="card card-image service-card">
             <div class="card-image-bg"
-              style="background-image: url('https://images.unsplash.com/photo-1522708323590-d24dbb6b0267?w=600&q=80');">
+              style="background-image: url('https://images.unsplash.com/photo-1555854877-bab0e564b8d5?w=800&q=80');">
             </div>
             <div class="card-image-content">
               <h3>Student Housing</h3>
@@ -104,7 +105,7 @@
           <!-- Property Management -->
           <div class="card card-image service-card">
             <div class="card-image-bg"
-              style="background-image: url('https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?w=600&q=80');">
+              style="background-image: url('https://images.unsplash.com/photo-1556912173-3db996e16054?w=800&q=80');">
             </div>
             <div class="card-image-content">
               <h3>Property Management</h3>
@@ -124,6 +125,7 @@
         <div class="trust-grid fade-in">
           <div class="trust-item">
             <div class="trust-icon">
+              <!-- Replaced SVG with Glass Icon Concept in CSS later if needed, limiting scope to specific request -->
               <svg viewBox="0 0 24 24">
                 <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z" />
                 <circle cx="12" cy="12" r="3" />
@@ -165,9 +167,9 @@
       <div class="container">
         <div class="grid grid-2" style="align-items: center; gap: 3rem;">
           <div class="slide-in-left">
-            <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=500&q=80"
-              alt="Professional businesswoman"
-              style="border-radius: var(--radius-lg); width: 100%; height: 400px; object-fit: cover; box-shadow: var(--shadow-lg);">
+            <!-- Updated Image: Professional Black Woman -->
+            <img src="assets/img/professional-woman.jpg" alt="Professional businesswoman"
+              style="border-radius: var(--radius-lg); width: 100%; height: 500px; object-fit: cover; box-shadow: var(--shadow-gold);">
           </div>
           <div class="slide-in-right">
             <h2>Built on Lived Experience</h2>
@@ -193,14 +195,18 @@
     <!-- Featured Properties -->
     <section class="section bg-mesh">
       <div class="container">
-        <h2 class="text-center mb-2">Featured Properties</h2>
-        <p class="text-center" style="max-width: 500px; margin: 0 auto var(--space-4);">Explore our latest developments
-          and available properties.</p>
+        <div class="flex-between mb-4">
+          <div>
+            <h2 class="mb-1">Featured Properties</h2>
+            <p>Explore our latest developments and available properties.</p>
+          </div>
+          <a href="properties.html" class="btn btn-outline-gold btn-sm">View All</a>
+        </div>
 
         <div class="property-grid stagger-animation">
           <div class="property-card">
             <div class="property-image">
-              <img src="https://images.unsplash.com/photo-1613490493576-7fde63acd811?w=500&q=80" alt="Luxury villa">
+              <img src="https://images.unsplash.com/photo-1613545325278-f24b0cae1224?w=800&q=80" alt="Luxury villa">
               <span class="property-badge">New</span>
             </div>
             <div class="property-content">
@@ -210,7 +216,7 @@
                   <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z" />
                   <circle cx="12" cy="10" r="3" />
                 </svg>
-                Borrowdale, Harare
+                Borrowdale Brooke, Harare
               </div>
               <div class="property-specs">
                 <span class="property-spec">4 Beds</span>
@@ -222,7 +228,7 @@
 
           <div class="property-card">
             <div class="property-image">
-              <img src="https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?w=500&q=80" alt="Modern home">
+              <img src="https://images.unsplash.com/photo-1600596542815-ffad4c1539a9?w=800&q=80" alt="Modern home">
               <span class="property-badge">Under Construction</span>
             </div>
             <div class="property-content">
@@ -244,7 +250,7 @@
 
           <div class="property-card">
             <div class="property-image">
-              <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=500&q=80"
+              <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?w=800&q=80"
                 alt="Contemporary house">
               <span class="property-badge">Available</span>
             </div>
@@ -264,10 +270,6 @@
               </div>
             </div>
           </div>
-        </div>
-
-        <div class="text-center mt-4">
-          <a href="properties.html" class="btn btn-primary">View All Properties</a>
         </div>
       </div>
     </section>
@@ -328,7 +330,7 @@
             <p><svg viewBox="0 0 24 24">
                 <path
                   d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
-              </svg> +263 XXX XXX XXX</p>
+              </svg> +263 77 700 0000</p>
             <p><svg viewBox="0 0 24 24">
                 <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z" />
                 <polyline points="22,6 12,13 2,6" />
@@ -351,7 +353,7 @@
     </div>
   </footer>
 
-  <script src="assets/js/main.js"></script>
+  <script src="assets/js/main.js?v=2"></script>
 </body>
 
 </html>
